FIX: Tiny Sliver on Test Page Triangle Z-Index

--- a/test/test.css
+++ b/test/test.css
@@ -31,7 +31,6 @@ header h2{
 	display:inline-block;
 	margin:0;
 	border:0;
-	overflow:hidden;
 	
 	
 	position: relative;
@@ -45,34 +44,50 @@ header h2{
 
 /*
 Colors and/or backgrounds
+*
+
+.Panel:nth-child(odd):after{
+	background:green;
+}
+.Panel:nth-child(even):after{
+	background:blue;
+}*/
+
+.Panel:nth-child(even) .PanelBeforeChild{
+	background:green;
+}
+.Panel:nth-child(odd) .PanelBeforeChild{
+	background:blue;
+}/*
+.Panel:nth-child(5)::after{
+	background:blue;
+}
 */
 
-.Panel:nth-child(even):after{
-	background:green;
+.Panel:nth-child(1){
+    z-index:0;
 }
-.Panel:nth-child(odd):after{
-	background:blue;
+.Panel:nth-child(2){
+    z-index:1;
+}
+.Panel:nth-child(3){
+    z-index:2;
+}
+.Panel:nth-child(4){
+    z-index:3;
+}
+.Panel:nth-child(5){
+    z-index:4;
 }
 
-.Panel:nth-child(odd)::before{
-	background:green;
-}
-.Panel:nth-child(even)::before{
-	background:blue;
-}
-.Panel:nth-child(5)::before{
-	background:blue;
-}
 
 
-.Panel:nth-child(3):after{
+.Panel:nth-child(3) .PanelBeforeChild{
 	background-image:url("http://aktsa.com/images/nats.jpg");
     background-size:cover;
     background-position:50% 50%;
 }
-.Panel:nth-child(2)::before{
-	background:black;
-}
+
 
 .TitleBG{
     position:absolute;
@@ -82,6 +97,10 @@ Colors and/or backgrounds
     background:radial-gradient(rgba(0,0,0,0.4), black);
     left:0;
     top:0;
+  -webkit-transform-origin: 100% 0;
+  -ms-transform-origin: 100% 0;
+  transform-origin: 100% 0;
+  transform: skew(-3deg);
 }
 header{
 	position:relative;
@@ -123,8 +142,8 @@ header{
 
 
 
-
-.Panel::before {
+/*
+.Panel::after {
   content: '';
   position: absolute;
   top: 0; left: 100%;
@@ -134,9 +153,15 @@ header{
   -ms-transform-origin: 100% 0;
   transform-origin: 100% 0;
   transform: skew(-3deg);
-}
+}*/
 
-.Panel::after {
+/*.Panel::before*/
+.PanelBeforeParent{
+    overflow:hidden;
+    width:100%;
+    height:100%;
+}
+.PanelBeforeChild{
   content: '';
   position: absolute;
   top: 0; left: 0;
@@ -145,5 +170,4 @@ header{
   -ms-transform-origin: 100% 0;
   transform-origin: 100% 0;
   transform: skew(-3deg);
-  z-index: -1;
 }
